--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Smart Solution</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Jalan Barokah RT.001 RW. 002 Desa Nambakan Kecamatan Ringinrejo Kabupaten Kediri Provinsi Jawa Timur Kode Pos 64176·
+                        Jalan Barokah, RT.001 RW. 002, Desa Nambakan, Kecamatan Ringinrejo, Kabupaten Kediri, Provinsi Jawa Timur, Kode Pos 64176.
                         <a href="mailto:rabbanitechno@gmail.com">rabbanitechno@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
