--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Instuctor</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Computer Instructor</h3>
+                            <div class="subheading mb-3">, Office, Database, Programming</div>
+                            <h4>Operating System</h4><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
+                            <h4>Office</h4><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
+                            <h4>Internet</h4><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
+                            <h4>Database</h4><p>DBaae-III, Access</p>
+                            <h4>Programming</h4><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2009 - 2002</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
@@ -69,6 +81,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
+                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
