--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Instuctor</h2>
+                    <h2 class="mb-5">Computer Instructor</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Computer Instructor</h3>
+                            <h3 class="mb-0">Dimo Education Center</h3>
                             <div class="subheading mb-3">, Office, Database, Programming</div>
                             <h4>Operating System</h4><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
                             <h4>Office</h4><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
