--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Dimo Education Center</h3>
-                            <div class="subheading mb-3">, Office, Database, Programming</div>
-                            <h4>Operating System</h4><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
-                            <h4>Office</h4><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
-                            <h4>Internet</h4><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
-                            <h4>Database</h4><p>DBaae-III, Access</p>
-                            <h4>Programming</h4><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
+                            <div class="subheading mb-3">Operating System, Office, Internet, Database, Programming</div>
+                            <h6>Operating System</h6><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
+                            <h6>Office</h6><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
+                            <h6>Internet</h6><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
+                            <h6>Database</h6><p>DBaae-III, Access</p>
+                            <h6>Programming</h6><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2009 - 2002</span></div>
                     </div>
