--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Computer Instructor</h2>
+                    <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Dimo Education Center</h3>
-                            <div class="subheading mb-3">Operating System, Office, Internet, Database, Programming</div>
+                            <h3 class="mb-0">Instructor Operating System, Office, Internet, Database, Programming</h3>
+                            <div class="subheading mb-3">Dimo Education Center</div>
                             <h6>Operating System</h6><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
                             <h6>Office</h6><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
                             <h6>Internet</h6><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
                             <h6>Database</h6><p>DBaae-III, Access</p>
                             <h6>Programming</h6><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2009 - 2002</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2002</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
