--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <h6>Operating System</h6><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
                             <h6>Office</h6><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
                             <h6>Internet</h6><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
-                            <h6>Database</h6><p>DBaae-III, Access</p>
+                            <h6>Database</h6><p>DBase-III, Access</p>
                             <h6>Programming</h6><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2002</span></div>
