--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="subheading mb-3">Dimo Education Center</div>
                             <h5>Operating System</h5><p>Windows 3.1.1, Windows 97, Windows 98, Windows 2000, Windows Millenium, Windows XP</p>
                             <h5>Office</h5><p>Wordstar, Lotus-123, Newspaper, Banner Mania</p>
-                            <h5>Internet</h5><p>Plasa Telkom, Google, mIRC, Yahoo Mail, Geocities</p>
+                            <h5>Internet</h5><p>Browsing Google, Email Yahoo, Chatting mIRC, Blog Geocities</p>
                             <h5>Database</h5><p>DBase-III, Access</p>
                             <h5>Programming</h5><p>Basic, Pascal, Foxpro, Visual Basic 3.0, Visual Basic 6.0</p>
                         </div>
@@ -75,11 +75,14 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Programmer</h3>
+                            <div class="subheading mb-3">BSoftware</div>
+                            <h5>Desktop</h5><p>Basic, Borland Turbo Pascal, Fortran, Visual Basic 3.0, Visual Basic 6.0, Foxpro, DBase-III, COBOL</p>
+                            <h5>Web</h5><p>HTML, ASP, PHP, JSP</p>
+                            <h5>Database</h5><p>SQL Server 2000, MySQL, DBase-III, Access, ORACLE</p>
+                            <h5>Networking</h5><p>CCNA, MTCNA</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2002</span></div>
                     </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
