--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                             <h5>Desktop</h5><p>Basic, Borland Turbo Pascal, Fortran, Visual Basic 3.0, Visual Basic 6.0, Foxpro, DBase-III, COBOL</p>
                             <h5>Web</h5><p>HTML, ASP, PHP, JSP</p>
                             <h5>Database</h5><p>SQL Server 2000, MySQL, DBase-III, Access, ORACLE</p>
-                            <h5>Networking</h5><p>CCNA, MTCNA</p>
+                            <h5>Networking</h5><p>CCNA, Mikrotik</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2002</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - Sekarang</span></div>
                     </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
