--- a/index.html
+++ b/index.html
@@ -75,23 +75,27 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Programmer</h3>
+                            <h3 class="mb-0">Fullstack Developer</h3>
                             <div class="subheading mb-3">BSoftware</div>
                             <h5>Desktop</h5><p>Basic, Borland Turbo Pascal, Fortran, Visual Basic 3.0, Visual Basic 6.0, Foxpro, DBase-III, COBOL</p>
                             <h5>Web</h5><p>HTML, ASP, PHP, JSP</p>
+                            <h5>Mobile</h5><p>Android Studio, Xamarin, AppInventor, Thunkable, </p>
                             <h5>Database</h5><p>SQL Server 2000, MySQL, DBase-III, Access, ORACLE</p>
-                            <h5>Networking</h5><p>CCNA, Mikrotik</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - Sekarang</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2003</span></div>
                     </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Fullstack Developer</h3>
+                            <div class="subheading mb-3">Rabbanitechno</div>
+                            <h5>Desktop</h5><p>Python, Java Apache Netbeans/Eclipse, Visual Studio Basic 3/5.0/6.0/.Net, Visual Studio C++/C#, Embarcadero Delphi</p>
+                            <h5>Web</h5><p>HTML, CSS, Javascript, PHP, JSP, Framework CogeIgniter, Framework Laravel, Bootstrap, Framework Node.js</p>
+                            <h5>Mobile</h5><p>Android Studio Java/Kotlin, (Dart) Flutter, AppInventor, Thunkable, Xamarin</p>
+                            <h5>Database</h5><p>SQLite, MySQL, PostgreSQL, SQL Server, ORACLE</p>
+                            <h5>Networking</h5><p>CCNA, MTCNA</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2003 - Sekarang</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
