--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                             <h5>Mobile</h5><p>Android Studio Java/Kotlin, (Dart) Flutter, AppInventor, Thunkable, Xamarin</p>
                             <h5>Database</h5><p>SQLite, MySQL, PostgreSQL, SQL Server, ORACLE</p>
                             <h5>Networking</h5><p>CCNA, MTCNA</p>
+                            <h5>Data Science Library</h5><p>Numpy, Pandas, Scikit-Learn, Tensorflow, Keras, Scipy, Stats Model, Pytorch, NTLK, OpenCV, Geopandas</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2003 - Sekarang</span></div>
                     </div>
