--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2002</span></div>
                     </div>
-                    <!--
+                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Fullstack Developer</h3>
+                            <h3 class="mb-0">Past Technology</h3>
                             <div class="subheading mb-3">BSoftware</div>
                             <h5>Desktop</h5><p>Basic, Borland Turbo Pascal, Fortran, Visual Basic 3.0, Visual Basic 6.0, Foxpro, DBase-III, COBOL</p>
                             <h5>Web</h5><p>HTML, ASP, PHP, JSP</p>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 1999 - 2003</span></div>
                     </div>
-                    -->
+                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fullstack Developer</h3>
@@ -98,22 +98,6 @@
                             <h5>Data Science Library</h5><p>Numpy, Pandas, Scikit-Learn, Tensorflow, Keras, Scipy, Stats Model, Pytorch, NTLK, OpenCV, Geopandas</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 1999 - Sekarang</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
