--- a/index.html
+++ b/index.html
@@ -145,6 +145,53 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
+                    <hr>
+                      <div class="category">
+        <h2>Desktop Programming</h2>
+        <div class="icon"><i class="fab fa-python"></i><span>Python</span></div>
+        <div class="icon"><i class="fab fa-java"></i><span>Java</span></div>
+        <div class="icon"><i class="fas fa-code"></i><span>NetBeans/Eclipse</span></div>
+        <div class="icon"><i class="fas fa-laptop-code"></i><span>Visual Studio</span></div>
+        <div class="icon"><i class="fas fa-desktop"></i><span>Delphi</span></div>
+    </div>
+
+    <div class="category">
+        <h2>Web Programming</h2>
+        <div class="icon"><i class="fab fa-html5"></i><span>HTML</span></div>
+        <div class="icon"><i class="fab fa-css3-alt"></i><span>CSS</span></div>
+        <div class="icon"><i class="fab fa-js"></i><span>JavaScript</span></div>
+        <div class="icon"><i class="fab fa-php"></i><span>PHP</span></div>
+        <div class="icon"><i class="fas fa-file-alt"></i><span>JSP</span></div>
+        <div class="icon"><i class="fas fa-cogs"></i><span>CodeIgniter</span></div>
+        <div class="icon"><i class="fab fa-laravel"></i><span>Laravel</span></div>
+        <div class="icon"><i class="fab fa-bootstrap"></i><span>Bootstrap</span></div>
+        <div class="icon"><i class="fab fa-node-js"></i><span>Node.js</span></div>
+    </div>
+
+    <div class="category">
+        <h2>Mobile Programming</h2>
+        <div class="icon"><i class="fab fa-android"></i><span>Android Studio</span></div>
+        <div class="icon"><i class="fas fa-mobile-alt"></i><span>Flutter</span></div>
+        <div class="icon"><i class="fas fa-th"></i><span>AppInventor</span></div>
+        <div class="icon"><i class="fas fa-th-large"></i><span>Thunkable</span></div>
+        <div class="icon"><i class="fab fa-xing"></i><span>Xamarin</span></div>
+    </div>
+
+    <div class="category">
+        <h2>Database</h2>
+        <div class="icon"><i class="fas fa-database"></i><span>SQLite</span></div>
+        <div class="icon"><i class="fas fa-database"></i><span>MySQL</span></div>
+        <div class="icon"><i class="fas fa-database"></i><span>PostgreSQL</span></div>
+        <div class="icon"><i class="fas fa-database"></i><span>SQL Server</span></div>
+        <div class="icon"><i class="fas fa-database"></i><span>Oracle</span></div>
+    </div>
+
+    <div class="category">
+        <h2>Networking</h2>
+        <div class="icon"><i class="fas fa-network-wired"></i><span>CCNA</span></div>
+        <div class="icon"><i class="fas fa-wifi"></i><span>MTCNA</span></div>
+    </div>
+                    <hr>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
