--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     </h1>
                     <div class="subheading mb-5">
                         Jalan Barokah, RT.001 RW. 002, Desa Nambakan, Kecamatan Ringinrejo, Kabupaten Kediri, Provinsi Jawa Timur, Kode Pos 64176.
-                        <a href="mailto:rabbanitechno@gmail.com">rabbanitechno@gmail.com</a>
+                        <p><a href="mailto:rabbanitechno@gmail.com"><i class="fas fa-envelope"></i> rabbanitechno@gmail.com</a></p>
+                        <p><a href="https://wa.me/6285736666309?text=Rabbanitechno%20Smart%20Solution"><i class="fab fa-whatsapp"></i> WhatsApp</a></p>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
