--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                             <h5>Database</h5><p>SQLite, MySQL, PostgreSQL, SQL Server, ORACLE</p>
                             <h5>Networking</h5><p>CCNA, MTCNA</p>
                             <h5>Data Science Library</h5><p>Numpy, Pandas, Scikit-Learn, Tensorflow, Keras, Scipy, Stats Model, Pytorch, NTLK, OpenCV, Geopandas</p>
+                            <h5>Internet of Things</h5><p>ESP32, ESP8266, Arduino, Raspberry Pi, Nvidia, Jetson TX2</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 1999 - Sekarang</span></div>
                     </div>
