--- a/index.html
+++ b/index.html
@@ -14,8 +14,29 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <style>
+            .float{
+            	position:fixed;
+            	width:60px;
+            	height:60px;
+            	bottom:40px;
+            	right:40px;
+            	background-color:#25d366;
+            	color:#FFF;
+            	border-radius:50px;
+            	text-align:center;
+              font-size:30px;
+            	box-shadow: 2px 2px 3px #999;
+              z-index:100;
+            }
+            .my-float{
+            	margin-top:16px;
+            }
+        </style>
     </head>
     <body id="page-top">
+        <a href="https://wa.me/6285736666309?text=Rabbanitechno%20Smart%20Solution" class="float" target="_blank"><i class="fa fa-whatsapp my-float"></i></a>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -23,6 +44,7 @@
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/rabbanitechno.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -45,8 +67,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Jalan Barokah, RT.001 RW. 002, Desa Nambakan, Kecamatan Ringinrejo, Kabupaten Kediri, Provinsi Jawa Timur, Kode Pos 64176.
-                        <p><a href="mailto:rabbanitechno@gmail.com"><i class="fas fa-envelope"></i> rabbanitechno@gmail.com</a></p>
-                        <p><a href="https://wa.me/6285736666309?text=Rabbanitechno%20Smart%20Solution"><i class="fab fa-whatsapp"></i> WhatsApp</a></p>
+                        <p><a href="mailto:rabbanitechno@gmail.com" style='text-decoration:none;'><i class="fas fa-envelope"></i> rabbanitechno@gmail.com</a></p>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
