--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </style>
     </head>
     <body id="page-top">
-        <a href="https://wa.me/6285736666309?text=Rabbanitechno%20Smart%20Solution" class="float" target="_blank"><img src='https://commons.wikimedia.org/wiki/File:WhatsApp_logo.svg'></a>
+        <a href="https://wa.me/6285736666309?text=Rabbanitechno%20Smart%20Solution" class="float" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg'></a>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
