--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         Jalan Barokah, RT.001 RW. 002, Desa Nambakan, Kecamatan Ringinrejo, Kabupaten Kediri, Provinsi Jawa Timur, Kode Pos 64176.
                         <p><a href="mailto:rabbanitechno@gmail.com" style='text-decoration:none;'><i class="fas fa-envelope"></i> rabbanitechno@gmail.com</a></p>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">We are Rabbanitechno Team, a group of dedicated technology professionals committed to delivering the best digital solutions for your business needs. With over 25 years of experience in the technology field, we specialize in full-stack software development, from front-end to back-end, as well as complex system integration. Our focus is on creating innovative, efficient, and result-oriented products while adopting the latest technologies to provide added value to our partners and clients. With Rabbanitechno Team, we are ready to help you realize your digital vision for the future.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
