--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>As a team, we have a deep passion for exploring new programming languages and frameworks, constantly staying ahead of technological trends. We enjoy contributing to open-source projects, mentoring aspiring developers, and engaging with tech communities to share knowledge and grow collectively. Our interests extend to fields like artificial intelligence, machine learning, cloud computing, and DevOps, where we continuously seek opportunities to innovate and solve complex problems. Outside of work, we enjoy tackling algorithm challenges, participating in coding competitions, and finding inspiration in books and blogs about technology and innovation. These pursuits fuel our creativity and drive to excel in delivering cutting-edge solutions.</p>
                 </div>
             </section>
             <hr class="m-0" />
